# create_carrier_card

./: .gitignore  README.md  pyproject.toml
bot/: __main__.py  config.py
bot/handlers/: carrier_card.py  help_bot.py  osgop_carrier_card.py  start.py
bot/media/tables/: mo_card.docx  mo_osgop.docx  msk_card.docx  msk_osgop.docx
bot/services/: get_file_data.py  get_mosreg_license.py  get_mosru_license.py  get_osgop_data.py
bot/utils/: captcha_solver.py  create_carrier_card.py  data_analysis.py  draw_card.py
